fix: disable dark mode and use correct background color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,14 +5,17 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --secondary: #f5efe6;
 }
 
-@media (prefers-color-scheme: dark) {
+/* TODO add dark mode compatibility */
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --secondary: #2c2c2c;
   }
-}
+} */
 
 body {
   color: var(--foreground);
